java dependency fixed