@@ -7,3 +7,8 @@ libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-sql" % "3.4.0"
 )
 
+fork := true
+javaOptions ++= Seq(
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-exports=java.base/sun.security.action=ALL-UNNAMED"
+)
